# scrater

./: .gitignore  README.md  index.html  main.py  pyproject.toml  requirements.txt
.github/workflows/: run-script.yaml  run-script.yml
data/: labels.csv  rates.csv  updated_rates.csv
scrape_rate/: config.py  get_initial_rates.py  plot_interactive_average.py  plot_interactive_rates.py  plot_rates.py  scrape_rate.py  update_rates.py  utils.py
scrape_rate/forecast/: forecast_rate.py
scrater/: get_initial_rates.py  update_rates.py  utils.py
scrater/forecast/: forecast_rate.py
scrater/plot/: plot_interactive_average.py  plot_interactive_rates.py
scrater/scrape/: update_rates.py
tests/: conftest.py  test_forecast.py  test_scrater.py  test_update_rates.py
tests/data/: labels.csv  updated_rates.csv
